--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ a {
     display: flex;
     justify-content: center;
     padding: 24px 0 24px 0;
-    box-shadow: 0px 1px 4px #dddddd;
+    box-shadow: 0px 1px 3px #dddddd;
     margin-bottom: 40px;
     background-color: #F9F9F9;
 }
@@ -32,11 +32,6 @@ a {
     flex: 1;
     flex-direction: column;
     align-items: center;
-}
-
-.round-title {
-    font-weight: 700;
-    text-align: center;
 }
 
 .button-container {
@@ -61,22 +56,50 @@ button:hover {
     background-color: #7869B8;
 }
 
-.scoreboard-container {
+.human-choice, .computer-choice {
+    background-color: #ffffff;
+    height: 100px;
+    width: 100px;
     border-radius: 10px;
-    box-shadow: 0px 2px 6px #dddddd;
+    border: 1px solid #dddddd;
+    text-align: center;
+    align-content: center;
+    font-size: 2.4em;
+    box-shadow: 0px 1px 3px #dddddd;
+}
+
+.scoreboard-container {
+    border: 1px solid #dddddd;
+    border-radius: 10px;
+    box-shadow: 0px 1px 3px #dddddd;
     width: 480px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 40px;
-    padding: 20px;
+    padding: 32px;
     background-color: #F9F9F9;
 }
 
-.score-tracking {
+.round-title {
+    font-weight: 700;
+    text-align: center;
+}
+
+.round-choices {
+    display: flex;
+    gap: 40px;
+    justify-content: center;
+    margin: 48px 0;
+}
+
+.round-choices h3 {
+    align-content: center;
+}
+
+.score-display {
     display: flex;
     flex-direction: row;
-    gap: 60px;
+    gap: 80px;
     margin-top: 20px;
 }
 
